Added request_method config, with GET as default. Added more logging info. Shows if data was empty.

--- a/config/api_diff_config_SAMPLE.yaml
+++ b/config/api_diff_config_SAMPLE.yaml
@@ -1,6 +1,7 @@
 old_api:
-  url: "https://sample-api.example.com/old-endpoint"
-  headers:
+   request_method: 'POST'
+   url: "https://sample-api.example.com/old-endpoint"
+   headers:
     Authorization: "Bearer sample-token-123"
 
 new_api:
